add file headers

--- a/libs/event/src/lib/participants/participants.component.html
+++ b/libs/event/src/lib/participants/participants.component.html
@@ -1,3 +1,5 @@
+<!-- implements F004 -->
+<!-- implements F005 -->
 <!-- implements F006 -->
 <ng-container *ngIf="vm$ | async as vm">
   <party-time-main-header title="Teilnehmer überblicken" />
@@ -70,7 +72,4 @@
       </div>
     </form>
   </section>
-  <pre>
-    {{ vm | json }}
-  </pre>
 </ng-container>
