feat: Add Additional Data to invitation Mail #7

--- a/apps/party-time-backend/src/main/resources/mail/invitation.mustache
+++ b/apps/party-time-backend/src/main/resources/mail/invitation.mustache
@@ -48,9 +48,27 @@
 <h1>Einladung!</h1>
 <p>Hallo {{name}},</p>
 <p>Du hast von {{organizer}} eine Einladung zum Event {{event}} erhalten!</p>
+<div style="padding: 15px">
+    <table class="demo">
+        <tbody>
+        <tr>
+            <td>Eventname</td>
+            <td>{{event}}</td>
+        </tr>
+        <tr>
+            <td>Ort</td>
+            <td>{{location}}</td>
+        </tr>
+        <tr>
+            <td>Datum und Uhrzeit</td>
+            <td>{{datetime}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 <p>Gib doch {{organizer}} eine Rückmeldung, ob du zum Event {{event}} kommen kannst/magst:</p>
 <p>
-    <a href="{{acceptLink}}" class="btn">Zusagen</a>
+    <a href="{{acceptLink}}" class="btn">Zusagen</a><br/>
     <a href="{{declineLink}}" class="btn">Absagen</a>
 </p>
 <p>Wenn du weitere Fragen hast oder Unterstützung benötigst, besuche unsere Website unter <a
