--- a/libs/invitation/src/lib/invitation/invitation.component.html
+++ b/libs/invitation/src/lib/invitation/invitation.component.html
@@ -1,6 +1,12 @@
+<!-- implements F008 -->
+<!-- implements F009 -->
 <ng-container *ngIf="vm$ | async as vm">
-    <div *ngIf="!vm.isInvited; else invited"></div>
-    <ng-template #invited>
+    <div *ngIf="vm.isInvited === undefined && vm.isLoading === true; else loaded">
+        <div class="grid h-screen place-items-center">
+        <party-time-loading-circle></party-time-loading-circle>
+        </div>
+    </div>
+    <ng-template #loaded>
         <div class="grid h-screen place-items-center">
             <div
                 class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
@@ -8,13 +14,12 @@
                     class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
                     Hey!
                 </p>
-                <p *ngIf="vm.isInvited; else declined">Wir haben deine Zusage gespeichert.</p>
-                <ng-template #declined>
-                    <p>Wir haben deine Absage gespeichert.</p>
-                </ng-template>
+                <p *ngIf="vm.isInvited;">Wir haben deine Zusage gespeichert.</p>
+                <p *ngIf="vm.isInvited === false;  error">Wir haben deine Absage gespeichert.</p>
+                <p *ngIf="vm.isInvited === undefined">Leider ist ein Fehler aufgetreten.</p>
                 <party-time-primary-button name="Zur Event-Übersicht" routerLink="/" />
             </div>
         </div>
     </ng-template>
-    <pre q>{{ vm | json }}</pre>
+    <pre>{{ vm | json }}</pre>
 </ng-container>
