--- a/libs/event/src/lib/other/other.component.html
+++ b/libs/event/src/lib/other/other.component.html
@@ -1,9 +1,6 @@
 <ng-container *ngIf="vm$ | async as vm">
-    <party-time-main-header title="Events überblicken" />
-    <section class="flex justify-center">
-      <div class="w-full">
-
-      </div>
-    </section>
-  </ng-container>
-  
+  <party-time-main-header title="Events überblicken" />
+  <section class="flex justify-center">
+    <div class="w-full"></div>
+  </section>
+</ng-container>
