--- a/libs/invitation/src/lib/invitation/invitation.component.html
+++ b/libs/invitation/src/lib/invitation/invitation.component.html
@@ -21,7 +21,10 @@
         <p *ngIf="vm.error?.error?.message">
           {{ vm.error?.error?.message }}
         </p>
-        <party-time-primary-button name="Zur Event-Übersicht" routerLink="/event" />
+        <party-time-primary-button
+          name="Zur Event-Übersicht"
+          routerLink="/event"
+        />
       </div>
     </div>
   </ng-template>
