--- a/libs/account/src/lib/delete/delete.component.html
+++ b/libs/account/src/lib/delete/delete.component.html
@@ -29,7 +29,7 @@
             >
               <div *ngIf="f['currentPassword'].errors['required']">
                 <party-time-primary-error
-                  error="Bitte gib dein aktuelles Passwort ein."
+                  error="Bitte gib dein Passwort ein."
                 />
               </div>
             </div>
