--- a/apps/party-time-backend-kotlin/src/main/resources/mail/verify_account.mustache
+++ b/apps/party-time-backend-kotlin/src/main/resources/mail/verify_account.mustache
@@ -49,7 +49,7 @@
 <p>Hallo {{name}},</p>
 <p>Vielen Dank für die Erstellung deines Accounts auf <a href="{{homepage}}">{{homepage}}</a>. Dein Account wurde erfolgreich angelegt.</p>
 <p>Klicke auf den folgenden Button, um deine E-Mail-Adresse zu verifizieren:</p>
-<p><a href="{{verificationLink}}" class="btn">E-Mail-Adresse verifizieren</a></p>
+<p><a href="{{{verificationLink}}}" class="btn">E-Mail-Adresse verifizieren</a></p>
 <p>Wenn du weitere Fragen hast oder Unterstützung benötigst, besuche unsere Website unter <a href="{{homepage}}">{{homepage}}</a>.</p>
 <p>Beste Grüße,</p>
 <p>Dein Partytime-Team</p>
